syntax = "proto3";

option java_multiple_files = true;
option java_package = "dev.zhihexireng.proto";

service Peer {
    rpc findPeers (RequestPeer) returns (PeerList) {
    }
}

message RequestPeer {
    string branchId = 1;
    string pubKey = 2;
    string ip = 3;
    int32 port = 4;
}

message PeerList {
    repeated NodeInfo nodes = 1;
}

message NodeInfo {
    string url = 1;
}
